fixing some responsive on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -319,10 +319,10 @@ nav h1 a {
   font-weight: bold;
   display: inline;
   width: 50%;
-  height: 50px;
+  height: 60px;
   background-color: #3e3a47;
   color: #fff;
-  padding: 7px 15px;
+  padding: 9px 15px;
   margin: 0;
   border-right: 2px solid #3e3a47;
 }
@@ -332,10 +332,10 @@ nav h1 a {
   text-align: right;
   display: inline;
   width: 50%;
-  height: 50px;
+  height: 60px;
   background-color: #3e3a47;
   color: #fff;
-  padding: 7px 15px;
+  padding: 9px 15px;
   margin: 0;
   border-left: 3px solid #3e3a47;
 }
@@ -343,13 +343,13 @@ nav h1 a {
 #reviews-list li p:nth-child(3) {
   float: left;
   display: block;
-  width: 10%;
+  width: 18%;
   height: 35px;
   background-color: #f58500;
   margin: 7px 10px;
   border-radius: 25px;
   text-align: center;
-  padding: 5px 10px;
+  padding: 5px 18px;
 }
 #reviews-list li p:last-child {
   width: 90%;
@@ -387,8 +387,8 @@ nav h1 a {
   }
 
     #restaurant-container {
-    padding: 900px 20px 30px;
-    margin-top: 100px;
+   /* padding: 900px 20px 30px;
+    margin-top: 100px;*/
   }
 
 }
